--- a/css/index1.scss
+++ b/css/index1.scss
@@ -32,7 +32,7 @@
             .right{
                 display: flex;
                 width: 50%;
-                padding: 0px 10px;
+                margin-left: 65px;
                 .registration{
                     display: flex;
                     width: 55%;
@@ -67,6 +67,7 @@
                 width: 12%;
                 height: 50px;
                 line-height: 50px;
+                padding: 25px 0px;
                 P{
                     font-size: 18px;
                     color:#1685bc;
@@ -76,6 +77,8 @@
             .classify-seach{
                 width: 45%;
                 display: flex;
+                margin-left: 25px;
+                padding: 25px 0px;
                 .classify{
                     width: 150px;
                     height: 50px;
@@ -83,7 +86,7 @@
                     background-color: #f8f8f8;
                     line-height: 50px;
                     p{
-                        font-size: 16px;
+                        font-size: 15px;
                         margin-left: 10px;
                     }
                     .fas{
@@ -96,6 +99,7 @@
                     .search{
                         width: 382px;
                         height: 48px;
+                        border: 1px solid #f8f8f8;
                     }
                     .icon{
                         position: absolute;
@@ -107,9 +111,10 @@
             .notification{
                 width: 35%;
                 display: flex;
+                padding: 25px 0px;
                 img{
                     height: 50px;
-                    margin-left: 15px;
+                    margin-left: 25px;
                 }
                 .img-text{
                     display: flex;
@@ -120,10 +125,171 @@
                 }
             }
             .infor{
-                float: right;
+                margin-right: 5px;
                 .gmail{
-
+                    display: flex;
+                    p{
+                        font-weight: bold;
+                        font-size: 16px;
+                    }
+                    .fas{
+                        margin-left: 5px;
+                    }
                 }
+                .text-number{
+                    padding: 5px 0px;
+                    display: flex;
+                    /*margin-left: 75px;*/
+                    .number{
+                        display: flex;
+                        font-weight: bold;
+                    }
+                    .one{
+                        color:#e82e31;
+                        
+                    }
+                    .two{
+                        color:#1691b3;
+                    }
+                    .three{
+                        color:#f7c25c;
+                    }
+                }
+                .first{
+                    margin-left: 72px;
+                }
+                .second{
+                    margin-left: 83px;
+                }
+                .thirt{
+                    margin-left: 110px;
+                }
+            }
+        }
+    }
+}
+#navication{
+    background-color: #1786be;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    .menu{
+        width: 1200px;
+        height: 60px;
+        margin: auto;
+        display: flex;
+        list-style: none;
+        a{
+            text-decoration: none;
+        }
+        .home{
+            font-weight: 300;
+            width: 133px;
+            background-color: #177fb2;
+            height: 60px;
+            color:#fff;
+            text-align: center;
+            img{
+                margin-top: 8px;
+                margin-bottom: -8px;
+            }
+        }
+        .category{
+            display: flex;
+            line-height: 60px;
+            padding-left: 65px;
+            color: #fff;
+            font-weight: 300;
+            i{
+                line-height: 60px;
+                font-weight: 2px;
+            }
+            p{
+                margin-left: 10px;
+            }
+        }
+        .general{
+            font-weight: 300;
+            padding-left: 52px;
+            line-height: 60px;
+            color: #fff;
+        }
+    }
+}
+
+#content{
+    display: flex;
+    width: 1200px;
+    margin: auto;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    .left{
+        width: 67%;
+        margin: 50px 0px;
+        margin-right: 25px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        .heading{
+            display: flex;
+            height: 50px;
+            background-color: #f1f5f8;
+            .category{
+                margin: 0 65px;
+                a{
+                    text-decoration: none;
+                    color: #000;
+                    line-height: 50px;
+                    font-size: 15px;
+                }
+            }
+        }
+        .content-list{
+            padding: 10px 20px;
+            .list{
+                a{
+                    text-decoration: none;
+                    color: #000;
+                    font-size: 15px;
+                    li{
+                        display: flex;
+                        padding: 10px;
+                    }
+                    .boder{
+                        border-top: 1px dashed #ececec;
+                    }
+                }
+            }
+        }
+    }
+    .right{
+        width: 33%;
+        margin: 50px 0px;
+        position: relative;
+        .content-section{
+            .img-text{      
+                a{
+                    display: flex;
+                    text-decoration: none;
+                    color: #000;
+                    padding: 20px 0px;
+                    p{
+                        margin-left: 20px;
+                        font-size: 15px;
+                    }
+                }
+            }
+            .border-first{
+                border-top: 1px solid #ececec;
+                margin-top: 25px;
+                padding-top: 13px;
+            }
+            .border{
+                border-top: 1px solid #ececec;
+            }
+            .text{
+                position: absolute;
+                top: 14px;
+                left: 128px;
+                background-color: #fff;
+                width: 160px;
+                text-align: center;
+                font-weight: bold;
             }
         }
     }
