--- a/css/index.scss
+++ b/css/index.scss
@@ -1,10 +1,10 @@
 *{
     margin:0px;
     padding:0px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #header{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:13px;
     .heading{
         background-color:#f8f8f8;
@@ -57,7 +57,6 @@
         }
     }
     .sub-heading{
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         .container{
             display: flex;
             height: 100px;
@@ -85,13 +84,48 @@
                     display: flex;
                     background-color: #f8f8f8;
                     line-height: 50px;
+                    position: relative;
+                    &:hover .sub-menu{
+                        display: block;
+                    }
                     p{
                         font-size: 15px;
                         margin-left: 10px;
                     }
                     .fas{
                         line-height: 48px;
-                        margin-left: 45px;
+                        margin-left: 35px;
+                    }
+                   .sub-menu{
+                       display: none;
+                        position:absolute;
+                        top: 140px;
+                        width: 222px;
+                        height: 222px;
+                        background-color: #fff;
+                        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+                        transition: 0.4s;
+                        ul{
+                            list-style: none;
+                            padding: 0px 15px;
+                            display: block;
+                            a{
+                                text-decoration: none;
+                                color: #000;
+                                border-top: 1px dashed #ececec;
+                                display: block;
+                                height: 40px;
+                                li{
+                                    display: flex;
+                                    p{
+                                        width: 80%;
+                                    }
+                                }
+                                &:hover{
+                                    color: #479bd7;
+                                }
+                            }
+                        }
                     }
                 }
                 .search-icon{
@@ -112,17 +146,22 @@
                 width: 35%;
                 display: flex;
                 padding: 25px 0px;
-                img{
-                    height: 50px;
-                    margin-left: 25px;
-                }
-                .img-text{
-                    display: flex;
-                    height: 50px;
-                    .text{
-                        line-height:50px;
+                a{
+                    text-decoration: none;
+                    color: #000;
+                    img{
+                        height: 50px;
+                        margin-left: 25px;
+                    }
+                    .img-text{
+                        display: flex;
+                        height: 50px;
+                        .text{
+                            line-height:50px;
+                        }
                     }
                 }
+                
             }
             .infor{
                 margin-right: 5px;
@@ -137,7 +176,7 @@
                     }
                 }
                 .text-number{
-                    padding: 5px 0px;
+                    padding: 2px 0px;
                     display: flex;
                     /*margin-left: 75px;*/
                     .number{
@@ -179,6 +218,9 @@
         list-style: none;
         a{
             text-decoration: none;
+            &:hover{
+                background-color: #177fb2;
+            }
         }
         .home{
             font-weight: 300;
@@ -195,9 +237,10 @@
         .category{
             display: flex;
             line-height: 60px;
-            padding-left: 65px;
+            padding:0 32px;
             color: #fff;
             font-weight: 300;
+            transition: 0.8s;
             i{
                 line-height: 60px;
                 font-weight: 2px;
@@ -205,12 +248,18 @@
             p{
                 margin-left: 10px;
             }
+            &:hover{
+                color: #a0d3ee;
+            }
         }
         .general{
             font-weight: 300;
-            padding-left: 52px;
+            padding:0 27px;
             line-height: 60px;
             color: #fff;
+            &:hover{
+                color: #a0d3ee;
+            }
         }
     }
 }
@@ -219,7 +268,6 @@
     display: flex;
     width: 1200px;
     margin: auto;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     .left{
         width: 67%;
         margin: 50px 0px;
@@ -230,12 +278,17 @@
             height: 50px;
             background-color: #f1f5f8;
             .category{
-                margin: 0 65px;
+                padding: 0 50px;
+                width: 33.333%;
                 a{
                     text-decoration: none;
                     color: #000;
                     line-height: 50px;
                     font-size: 15px;
+                }
+                &:hover{
+                    background-color: #fff;
+                    font-weight: bold;
                 }
             }
         }
@@ -249,9 +302,19 @@
                     li{
                         display: flex;
                         padding: 10px;
+                        img{
+                            height: 25px;
+                        }
+                        p{
+                            width: 695px;
+                        }
+                       
                     }
                     .boder{
                         border-top: 1px dashed #ececec;
+                    }
+                    &:hover{
+                        color: #177fb2;
                     }
                 }
             }
@@ -272,6 +335,9 @@
                         margin-left: 20px;
                         font-size: 15px;
                     }
+                    &:hover{
+                        color: #177fb2;
+                    }
                 }
             }
             .border-first{
@@ -290,6 +356,225 @@
                 width: 160px;
                 text-align: center;
                 font-weight: bold;
+            }
+        }
+    }
+}
+#document-list{
+    width: 1200px;
+    margin: auto;
+    .title{
+        height: 60px;
+        background-color: #1786be;
+        line-height: 60px;
+        color: #fff;
+        margin-bottom: 40px;
+        h2{
+            font-weight: 400;
+            font-size: 20px;
+            padding-left: 25px;
+        }
+    }
+    .row{
+        display: flex;
+        width: 100%;
+        margin-bottom: 30px;
+        .coll{
+            width: 24%;
+            height: 426px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            .img{
+                img{
+                    width: 100%;
+                    height: 167px;
+                }
+            }
+            .text{
+                padding: 0 12px;
+                .heading{
+                    p{
+                        font-weight: bold;
+                        display: block;
+                        padding: 10px 0;
+                        font-size: 14px;
+                        margin-left: 6px;
+                    }
+                }
+                .infor{
+                    .img-text{
+                        display: flex;
+                        padding: 5px 0;
+                        p{
+                            display: block;
+                            margin-left: 8px;
+                            font-size: 14px;
+                        }
+                        .color-number{
+                            color: #df3f29;
+                            font-weight: bold;
+                        }
+                    }
+
+                }
+            }
+            .buy{
+                width: 92px;
+                height: 26px;
+                background-color: #f0b006;
+                margin: auto;
+                margin-top: 20px;
+                border-bottom-right-radius: 12px;
+                border-top-right-radius: 12px;
+                border-bottom-left-radius: 12px;
+                border-top-left-radius: 12px;
+                a{
+                    text-decoration: none;
+                    p{
+                        color: #fff;
+                        line-height: 26px;
+                        text-align: center;
+                        font-size: 14px;
+                    }
+                }
+                &:hover {
+                    background-color: #ccc;
+                    p{
+                        color: #000;
+                    }
+                }
+            }
+        }
+        .center{
+            margin: 0 15px;
+        }
+        .left{
+            margin-right: 15px;
+        }
+        .right{
+            margin-left: 15px;
+        }
+    }
+}
+#infor-warning{
+    background-color: #f8f8f8;
+    padding: 50px 0;
+    .icon-text{
+        width: 1200px;
+        margin: auto;
+        text-align: justify;
+        .color{
+            color: #fb4015;
+        }
+        .gray-text{
+            color: #000;
+            opacity: 0.8;
+            font-size: 15px;
+        }
+    }
+}
+
+#footer{
+    background-color:#1786be;
+    color: #fff;
+    .content{
+        width: 1200px;
+        margin: auto;
+        display: flex;
+        height: 250px;
+        font-size: 14px;
+        padding: 45px 0;
+        .left{
+            text-align: justify;
+            width: 31%;
+            h4{
+                margin-bottom: 20px;
+            }
+            p{
+                margin: 10px 0;
+            }
+            .login{
+                display: flex;
+                margin: 30px 0;
+                width: 200px;
+                .sign-in{
+                    a{
+                        text-decoration: none;
+                        color: #fff;
+                    }  
+                }
+                .sign_in{
+                    margin-left: 20px;
+                    border-left: 1px solid #fff;
+                    padding-left:20px;
+                    a{
+                        text-decoration: none;
+                        color: #fff;
+                        i{
+                            margin-left: 3px;
+                        }
+                    }
+                }
+            }
+        }
+        .between{
+            width: 50%;
+            margin-left: 60px;
+            .heading{
+                margin-left: 8px;
+            }
+            .sub-heading{
+                margin-left: 8px;
+                padding: 20px 0;
+                font-size: 14px;
+            }
+            .img-text{
+                display: flex;
+                text-align: justify;
+                img{
+                    width: 38px;
+                    height: 25px;
+                }
+                p{
+                    padding: 2px 0;
+                }
+            }
+        }
+        .right{
+            margin-top: 40px;
+            width: 20%;
+            text-align: justify;
+            p{
+                margin-left: 56px;
+            }
+            img{
+                margin-top: 15px;
+                margin-left: 62px;
+            }
+        }
+    }
+}
+
+#sub-footer{
+    .container{
+        width: 1200px;
+        height: 80px;
+        margin: auto;
+        display: flex;
+        .copyright{
+            width: 70%;
+            line-height: 80px;
+            p{
+                color: #6d6d6d;
+                font-size: 16px;
+            }
+        }
+        .social{
+            width: 30%;
+            line-height: 80px;
+            a{
+                float: right;
+                color: #ccc;
+                font-size: 18px;
             }
         }
     }
